--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
+        <h1>Анна, здравствуйте, как ваши дела?</h1>
     </body>
     
 </html>
