--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>RSS Агрегатор</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="d-flex flex-column min-vh-100">
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
